# synthetic-respondents-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/bot/: handlers.py  runner.py  webhook.py
app/db/: models.py  session.py
app/services/: constants.py  openrouter_client.py  pipeline.py  pricing.py  prompting.py  report_pdf.py  ssr_service.py  study_service.py
app/utils/: cache.py  language.py  metrics.py  parser.py
app/workers/: celery_app.py  tasks.py
docs/: ARCHITECTURE.md  sample_stimuli.csv
scripts/: init_db.py
