[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-respondents-bot"
version = "0.1.0"
description = "Telegram bot MVP for synthetic respondents and SSR scoring."
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.2",
  "celery>=5.4.0",
  "redis>=5.0.7",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.4",
  "python-dotenv>=1.0.1",
  "reportlab>=4.2.2",
  "polars>=1.0.0",
  "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["."]

